<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/view_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/activity_login_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/activity_login_edit_username_hint"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textColor="@color/text_color_default" />

        <EditText
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_login_edittext"
            android:hint="@string/activity_login_edit_password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/text_color_default" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/activity_login_register"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/activity_login_text_register_text"
                android:textColor="@color/main_color"
                android:textSize="@dimen/text_size18"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_btn2"
            android:text="@string/activity_login_btn_text"
            android:textColor="@color/text_color_white"
            android:textSize="@dimen/text_size20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/message_test"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:gravity="center_vertical"
                android:text="短信验证登录"
                android:textColor="@color/text_color_gray"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="@dimen/text_size18" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:layout_gravity="right"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="忘记密码"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size18" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/sina_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:src="@drawable/sina" />

            <ImageView
                android:id="@+id/wechat_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:src="@drawable/wechat" />

            <ImageView
                android:id="@+id/qq_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:src="@drawable/qq" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>